# learn_cv_with_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  conanfile.txt  exercise_config.cmake
Module_01/: README.md
Module_01/ex01_auto/: README.md
Module_01/ex01_auto/answer/: CMakeLists.txt
Module_01/ex01_auto/answer/include/: data_utils.hpp
Module_01/ex01_auto/answer/src/: data_utils.cpp  main.cpp
Module_01/ex01_auto/todo/: CMakeLists.txt  readme.md
Module_01/ex01_auto/todo/include/: data_utils.hpp
Module_01/ex01_auto/todo/src/: data_utils.cpp  main.cpp
Module_01/ex01_auto/todo/test/: test_auto.cpp
Module_01/ex01_auto/todo/tests/: test_auto.cpp
Module_01/ex02_stl_perf/todo/: CMakeLists.txt  readme.md
Module_01/ex02_stl_perf/todo/src/: main.cpp
Module_01/ex02_stl_perf/todo/tests/: test_perf.cpp
Module_01/ex04_error_handling/answer/: CMakeLists.txt
Module_01/ex04_error_handling/answer/src/: main.cpp
Module_01/ex04_error_handling/todo/: CMakeLists.txt  conanfile.txt  readme.md
Module_01/ex04_error_handling/todo/src/: main.cpp
Module_01/ex04_error_handling/todo/tests/: test_error.cpp
Module_01/ex09_move_semantics/todo/: CMakeLists.txt  readme.md
Module_01/ex09_move_semantics/todo/src/: main.cpp
Module_01/ex09_move_semantics/todo/tests/: test_move.cpp
Module_01/ex10_raii_wrapper/answer/: CMakeLists.txt
Module_01/ex10_raii_wrapper/answer/include/: ImageBuffer.hpp
Module_01/ex10_raii_wrapper/answer/src/: ImageBuffer.cpp  main.cpp
Module_01/ex10_raii_wrapper/todo/: CMakeLists.txt  readme.md
Module_01/ex10_raii_wrapper/todo/include/: ImageBuffer.hpp
Module_01/ex10_raii_wrapper/todo/src/: ImageBuffer.cpp  main.cpp
Module_01/ex10_raii_wrapper/todo/tests/: test_raii.cpp
Module_01/ex11_unit_testing/: readme.md
Module_01/ex11_unit_testing/todo/: CMakeLists.txt  readme.md
Module_01/ex11_unit_testing/todo/include/: MathUtils.hpp
Module_01/ex11_unit_testing/todo/src/: main.cpp
Module_01/ex11_unit_testing/todo/tests/: test_math.cpp
Module_01/ex12_scoped_timer/: readme.md
Module_01/ex12_scoped_timer/todo/: CMakeLists.txt  readme.md
Module_01/ex12_scoped_timer/todo/include/: ScopedTimer.hpp
Module_01/ex12_scoped_timer/todo/src/: ScopedTimer.cpp  main.cpp
Module_01/ex12_scoped_timer/todo/tests/: test_timer.cpp
Module_01/ex13_minimal_logger/: readme.md
Module_01/ex13_minimal_logger/todo/: CMakeLists.txt  conanfile.txt  readme.md
Module_01/ex13_minimal_logger/todo/include/: Logger.hpp
Module_01/ex13_minimal_logger/todo/src/: Logger.cpp  main.cpp
Module_01/ex13_minimal_logger/todo/tests/: test_logger.cpp
Module_01/ex14_file_io/: readme.md
Module_01/ex14_file_io/answer/: CMakeLists.txt  conanfile.txt
Module_01/ex14_file_io/answer/include/: FileIO.hpp
Module_01/ex14_file_io/answer/src/: FileIO.cpp  main.cpp
Module_01/ex14_file_io/todo/: CMakeLists.txt  readme.md
Module_01/ex14_file_io/todo/include/: FileIO.hpp
Module_01/ex14_file_io/todo/src/: FileIO.cpp  main.cpp
Module_01/ex14_file_io/todo/tests/: test_fileio.cpp
Module_02/: README.md
Module_02/ex02_arithmetic/todo/: CMakeLists.txt
Module_02/ex02_arithmetic/todo/src/: arithmetic.cpp
Module_02/ex02_arithmetic/todo/tests/: test_arithmetic.cpp
Module_02/ex03_block_ops/todo/: CMakeLists.txt
Module_02/ex03_block_ops/todo/src/: block_ops.cpp
Module_02/ex05_eigen_decomposition/todo/: CMakeLists.txt
Module_02/ex05_eigen_decomposition/todo/include/: eigen_decomp.hpp
Module_02/ex06_rotation_representations/answer/: CMakeLists.txt
Module_02/ex06_rotation_representations/answer/src/: rotations.cpp
Module_02/ex07_quaternions/answer/: CMakeLists.txt
Module_02/ex07_quaternions/answer/src/: main.cpp  quaternions.cpp
Module_02/ex08_rigid_body_transforms/todo/: CMakeLists.txt
Module_02/ex08_rigid_body_transforms/todo/src/: se3.cpp
Module_02/ex09_least_squares/todo/: CMakeLists.txt
Module_02/ex09_least_squares/todo/include/: least_squares.hpp
Module_02/ex09_least_squares/todo/src/: least_squares.cpp
Module_02/ex09_least_squares/todo/tests/: test_least_squares.cpp
Module_02/ex10_geometry_project/todo/: CMakeLists.txt
Module_02/ex10_geometry_project/todo/include/: transformer.hpp
Module_02/ex10_geometry_project/todo/src/: main.cpp  transformer.cpp
Module_02/ex10_geometry_project/todo/tests/: test_transformer.cpp
Module_03/: README.md
Module_03/ex01_mat_internals/answer/: CMakeLists.txt
Module_03/ex01_mat_internals/answer/include/: mat_info.hpp
Module_03/ex01_mat_internals/answer/src/: main.cpp  mat_info.cpp
Module_03/ex02_pixel_access/answer/: CMakeLists.txt
Module_03/ex02_pixel_access/answer/src/: main.cpp  pixel_access.cpp
Module_03/ex02_pixel_access/todo/: CMakeLists.txt
Module_03/ex02_pixel_access/todo/include/: pixel_access.hpp
Module_03/ex02_pixel_access/todo/src/: pixel_access.cpp
Module_03/ex02_pixel_access/todo/tests/: test_pixel_access.cpp
Module_03/ex03_color_spaces/answer/: CMakeLists.txt
Module_03/ex03_color_spaces/answer/include/: color_spaces.hpp
Module_03/ex03_color_spaces/answer/src/: color_spaces.cpp  main.cpp
Module_08/ex15_glog/: readme.md
Module_15/ex01_configuration_space/: CMakeLists.txt  conanfile.txt  readme.md
Module_15/ex01_configuration_space/answer/src/: main.cpp
Module_15/ex01_configuration_space/todo/src/: main.cpp
Module_15/ex03_dijkstra/: CMakeLists.txt  readme.md
Module_15/ex03_dijkstra/answer/src/: main.cpp
Module_15/ex03_dijkstra/todo/src/: main.cpp
Module_15/ex04_rrt/: CMakeLists.txt  readme.md
Module_15/ex04_rrt/answer/src/: main.cpp
Module_15/ex04_rrt/todo/src/: main.cpp
Module_16/ex01_factory_pattern/: CMakeLists.txt  readme.md
Module_16/ex01_factory_pattern/answer/: CMakeLists.txt
Module_16/ex01_factory_pattern/answer/include/: algorithms.hpp  factory.hpp
Module_16/ex01_factory_pattern/answer/src/: main.cpp
Module_16/ex01_factory_pattern/todo/: CMakeLists.txt
Module_16/ex01_factory_pattern/todo/include/: factory.hpp
Module_16/ex01_factory_pattern/todo/src/: main.cpp
Module_16/ex01_factory_pattern/todo/tests/: test_factory.cpp
(+1325 files in other folders)
